# vitoclient

./: .coverage  .gitignore  MANIFEST.in  README.md  demo.py  demo_live.py  demo_mock.py  demo_simple.py  pyproject.toml  setup.py
.agent/rules/: architecture.md  git-workflow.md  testing.md
.agent/workflows/: commit-push.md  feature-develop.md  plan-only.md  pr-submit.md  release.md  tests-compliance-check.md
.github/workflows/: ci_cd.yml
docs/: 01_auth.md  01_getting_started.md  02_api_structure.md  02_models.md  03_api.md  03_auth_reference.md  04_commands.md  04_models_reference.md  05_cli.md  05_client_reference.md  06_cli_reference.md  06_error_handling.md  07_exceptions_reference.md
src/vi_api_client/: __init__.py  analytics.py  api.py  auth.py  cli.py  connection.py  exceptions.py  mock_client.py  models.py  parsers.py  parsing.py  utils.py  validation.py
src/vi_api_client/fixtures/: Vitocal250A_analytics.json
src/vitoclient/: __init__.py  api.py  auth.py  cli.py  const.py  exceptions.py  models.py
src/vitoclient.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  test_analytics.py  test_api.py  test_auth.py  test_cli_commands.py  test_cli_context.py  test_commands.py  test_device_parsing.py  test_hysteresis_parsing.py  test_mock_analytics.py  test_mock_data_integrity.py  test_models.py  test_parsers.py  test_validation.py
tests/fixtures/: feature_heating_curve.json
tests/integration/: test_workflow_mock.py
tutorials/: 02_models.md  03_api.md  04_commands.md
