[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vi_api_client"
version = "0.6.0"
description = "Async Python client for Viessmann Climate Solutions API"
authors = [
  { name = "Michael", email = "antigravity@example.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.8.0",
    "pkce>=1.0.3",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "aioresponses",
    "pytest-cov",
]

[project.scripts]
vi-client = "vi_api_client.cli:main"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "D",   # pydocstyle
    "E",   # pycodestyle error
    "W",   # pycodestyle warning
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "PL",  # pylint
    "RUF"  # ruff specific
]

ignore = [
    "D100", # Missing docstring in public module
    "D104", # Missing docstring in public package
    "D105", # Missing docstring in magic method
    "D203", # 1 blank line required before class docstring
    "D213", # Multi-line docstring summary should start at the second line
    "PLR2004", # Magic value used
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "PLR2004", "E501"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
combine-as-imports = true
